<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>kuka</name>
  <version>0.1.0</version>
  <description>ROS-Industrial support for KUKA manipulators (metapackage).</description>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <author email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <license>Apache2.0</license>

  <url type="website">http://wiki.ros.org/kuka</url>
  <url type="bugtracker">https://github.com/ros-industrial/kuka/issues</url>
  <url type="repository">https://github.com/ros-industrial/kuka</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <architecture_independent/>
    <metapackage/>
  </export>
</package>
